kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: neuralconsult
  labels:
    app: backend
spec:
  replicas: 2 # High Availability - 2 Pods across different nodes
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: docker.io/aymantantani/neuralconsult-backend:latest # Overwritten by ArgoCD
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1000m"
              memory: "1024Mi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: neuralconsult
spec:
  type: ClusterIP # Internal cluster communication
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: backend
